--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/css/all.css" />
+	<link rel="stylesheet" href="css/app.css" />
 
 </head>
 
@@ -21,8 +21,7 @@
 
 	<header class="header" role="banner">
 
-		<a class="logo" href="/">Fehack</a>
-
+		<a class="logo" href="/">FE Autos</a>
 		<nav class="nav" id="nav">
 
 			<ul>
@@ -34,6 +33,9 @@
 	</header>
 
 	<div class="main" role="main">
+		<aside>
+			This is a drill
+		</aside>
 		<h1>Fehack</h1>
 		Main Content
 	</div>
@@ -45,8 +47,10 @@
 </div><!-- .wrapper -->
 
 <!-- JS -->
-<script src="/js/zepto.js"></script>
-<script src="/js/app.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="js/hammer.js"></script>
+<script src="js/jquery.specialevent.hammer.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
