--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/app.css" />
+	<link rel="stylesheet" href="css/stylus.css" />
 
 </head>
 
@@ -28,23 +28,19 @@
 		</aside>
 		<div id="content" class="content">
 			<div id="gallery" class="gallery">
-				<div id="slideshow">
-	        		<ul>
-	            		<li><img src="img/autos/bmw-1.jpg"></li>
-						<li><img src="img/autos/bmw-2.jpg"></li>
-						<li><img src="img/autos/bmw-3.jpg"></li>
-						<li><img src="img/autos/bmw-4.jpg"></li>
-	        		</ul>
-	    		</div>
-				<div id="overview">
-			        <ul>
-			            <li class="active">1</li>
-			            <li>2</li>
-			            <li>3</li>
-			            <li>4</li>
-			        </ul>
-	    		</div>
-    		</div>
+				<div id="slider" class="swipe">
+					<ul>
+					    <li><div><img src="img/autos/bmw-1.jpg"></div></li>
+						<li><div><img src="img/autos/bmw-2.jpg"></div></li>
+						<li><div><img src="img/autos/bmw-3.jpg"></div></li>
+						<li><div><img src="img/autos/bmw-4.jpg"></div></li>
+					</ul>
+				</div>
+				<ul>
+					<li><a href='#' onclick='slider.prev();return false;'>prev</a></li>
+					<li><a href='#' onclick='slider.next();return false;'>next</a></li>
+				</ul>
+			</div>
 			<ul class="section">
 				<li>
 					<h2>Basic Info</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
@@ -95,6 +91,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="js/hammer.js"></script>
 <script src="js/jquery.specialevent.hammer.js"></script>
+<script src="js/swipe.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
