--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/app.css" />
+	<link rel="stylesheet" href="css/stylus.css" />
 
 </head>
 
