--- a/details.html
+++ b/details.html
@@ -41,43 +41,41 @@
 					<li><a href='#' onclick='slider.next();return false;'>next</a></li>
 				</ul>
 			</div>
-			<ul class="section">
-				<li>
-					<h2>Basic Info</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
-					<div class="details">
-						<h3>Chevrolet Camaro <span class="badge best-price">Best Price</span></h3>
-						<ul class="basic-info">
-							<li>Price: $50,000</li>
-							<li>Year: 2012</li>
-							<li>Mileage: 26,000</li>
-						</ul>
-					</div>
-					<div class="delete">Delete</div>
-				</li>
-				<li>
-					<h2>I’m Interested?</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
-					<div class="details">
-						<form>
-							<input name="fn-ln" placeholder="First and Last name">
-							<input name="email" placeholder="Email">
-							<input name="phone" placeholder="Phone">
-						</form>
-					</div>
-				</li>
-				<li>
-					<h2>More Details</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
-					<div class="details">
-						<dl>
-							<dt>Body:</dt>
-							<dd>
-								<span>Pickup</span>
-								<span>Silver</span>
-								<span>Gray</span>
-							</dd>
-						</dl>
-					</div>
-				</li>
-			</ul>
+			<div class="section">
+				<h2>Basic Info</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
+				<div class="details">
+					<h3>Chevrolet Camaro <span class="badge best-price">Best Price</span></h3>
+					<ul class="basic-info">
+						<li>Price: $50,000</li>
+						<li>Year: 2012</li>
+						<li>Mileage: 26,000</li>
+					</ul>
+				</div>
+				<div class="delete">Delete</div>
+			</div>
+			<div class="section">
+				<h2>I’m Interested?</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
+				<div class="details">
+					<form>
+						<input name="fn-ln" placeholder="First and Last name">
+						<input name="email" placeholder="Email">
+						<input name="phone" placeholder="Phone">
+					</form>
+				</div>
+			</div>
+			<div class="section">
+				<h2>More Details</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
+				<div class="details">
+					<dl>
+						<dt>Body:</dt>
+						<dd>
+							<span>Pickup</span>
+							<span>Silver</span>
+							<span>Gray</span>
+						</dd>
+					</dl>
+				</div>
+			</div>
 		</div>
 	</div>
 
