--- a/details.html
+++ b/details.html
@@ -7,7 +7,7 @@
 	<title>Fehack</title>
 	<meta name="description" content="{{ page.meta-description }}" />
 	<meta name="author" content="fehack" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
@@ -91,5 +91,6 @@
 <script src="js/jquery.specialevent.hammer.js"></script>
 <script src="js/swipe.js"></script>
 <script src="js/app.js"></script>
+
 </body>
 </html>
