--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="js/hammer.js"></script>
 <script src="js/jquery.specialevent.hammer.js"></script>
+<script src="js/swipe.js"></script>
 <script src="js/app.js"></script>
 
 </body>
