--- a/index.html
+++ b/index.html
@@ -20,25 +20,43 @@
 <div class="wrapper">
 
 	<header class="header" role="banner">
-
-		<a class="logo" href="/">FE Autos</a>
-		<nav class="nav" id="nav">
-
-			<ul>
-				<li><a href="#">title 1</a></li>
-				<li><a href="#">title 2</a></li>
-			</ul>
-		</nav>
-
+		<a class="logo" href="index.html">FE Autos</a>
 	</header>
 
 	<div class="main" role="main">
-		<aside>
-			This is a drill
-		</aside>
-		<h1>Fehack</h1>
-		Main Content
+
+		<h1>Used Cars in <b>11211</b> with <b>50 miles</b> radius</h1>
+
+		<article class="listing">
+			<img src="img/autos/bmw-1.jpg" alt="" />
+			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+		</article>
+
+		<article class="listing">
+			<img src="img/autos/bmw-1.jpg" alt="" />
+			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+		</article>
+
+		<article class="listing">
+			<img src="img/autos/bmw-1.jpg" alt="" />
+			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+		</article>
+
+		<article class="listing">
+			<img src="img/autos/bmw-1.jpg" alt="" />
+			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+		</article>
+
+		<article class="listing">
+			<img src="img/autos/bmw-1.jpg" alt="" />
+			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+		</article>
+
 	</div>
+
+	<aside role="complementary">
+		This is a drill
+	</aside>
 
 	<footer class="footer" role="contentinfo">
 		<p><small>Footer</small></p>
@@ -48,8 +66,8 @@
 
 <!-- JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="js/hammer.js"></script>
-<script src="js/jquery.specialevent.hammer.js"></script>
+<!-- <script src="js/hammer.js"></script>
+<script src="js/jquery.specialevent.hammer.js"></script> -->
 <script src="js/swipe.js"></script>
 <script src="js/app.js"></script>
 
