--- a/details.html
+++ b/details.html
@@ -87,8 +87,8 @@
 
 <!-- JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="js/hammer.js"></script>
-<script src="js/jquery.specialevent.hammer.js"></script>
+<!-- <script src="js/hammer.js"></script>
+<script src="js/jquery.specialevent.hammer.js"></script> -->
 <script src="js/swipe.js"></script>
 <script src="js/app.js"></script>
 
