--- a/details.html
+++ b/details.html
@@ -22,25 +22,24 @@
 		<a class="logo" href="/">FE Autos</a>
 	</header>
 
-	<div class="main" role="main">
-		<aside>
-			This is a drill
-		</aside>
-		<div id="content" class="content">
-			<div id="gallery" class="gallery">
-				<div id="slider" class="swipe">
-					<ul>
-					    <li><div><img src="img/autos/bmw-1.jpg"></div></li>
-						<li><div><img src="img/autos/bmw-2.jpg"></div></li>
-						<li><div><img src="img/autos/bmw-3.jpg"></div></li>
-						<li><div><img src="img/autos/bmw-4.jpg"></div></li>
-					</ul>
-				</div>
+	<article class="main" role="main">
+		<div id="gallery" class="gallery">
+			<div id="slider" class="swipe">
 				<ul>
-					<li><a href='#' onclick='slider.prev();return false;'>prev</a></li>
-					<li><a href='#' onclick='slider.next();return false;'>next</a></li>
+				    <li><div><img src="img/autos/bmw-1.jpg"></div></li>
+					<li><div><img src="img/autos/bmw-2.jpg"></div></li>
+					<li><div><img src="img/autos/bmw-3.jpg"></div></li>
+					<li><div><img src="img/autos/bmw-4.jpg"></div></li>
 				</ul>
 			</div>
+			<div class="controls">
+				<a href='#' class="prev" onclick='slider.prev();return false;'><em>prev</em></a>
+				<span class="current-slide">
+					<em class="on">•</em><em>•</em><em>•</em><em>•</em></span>
+				<a href='#' class="next" onclick='slider.next();return false;'><em>next</em></a>
+			</div>
+		</div>
+		<div id="content" class="content">
 			<div class="section">
 				<h2>Basic Info</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
 				<div class="details">
@@ -77,7 +76,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</article>
 
 	<footer class="footer" role="contentinfo">
 		<p><small>Footer</small></p>
