--- a/index.html
+++ b/index.html
@@ -24,33 +24,34 @@
 	</header>
 
 	<div class="main" role="main">
+		<div class="content">
+			<h1>Used Cars in <b>11211</b> with <b>50 miles</b> radius</h1>
 
-		<h1>Used Cars in <b>11211</b> with <b>50 miles</b> radius</h1>
+			<article class="listing">
+				<img src="img/autos/bmw-1.jpg" alt="" />
+				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+			</article>
 
-		<article class="listing">
-			<img src="img/autos/bmw-1.jpg" alt="" />
-			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-		</article>
+			<article class="listing">
+				<img src="img/autos/bmw-1.jpg" alt="" />
+				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+			</article>
 
-		<article class="listing">
-			<img src="img/autos/bmw-1.jpg" alt="" />
-			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-		</article>
+			<article class="listing">
+				<img src="img/autos/bmw-1.jpg" alt="" />
+				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+			</article>
 
-		<article class="listing">
-			<img src="img/autos/bmw-1.jpg" alt="" />
-			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-		</article>
+			<article class="listing">
+				<img src="img/autos/bmw-1.jpg" alt="" />
+				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+			</article>
 
-		<article class="listing">
-			<img src="img/autos/bmw-1.jpg" alt="" />
-			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-		</article>
-
-		<article class="listing">
-			<img src="img/autos/bmw-1.jpg" alt="" />
-			<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-		</article>
+			<article class="listing">
+				<img src="img/autos/bmw-1.jpg" alt="" />
+				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+			</article>
+		</div>
 
 	</div>
 
