--- a/details.html
+++ b/details.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="controls">
 				<a href='#' class="prev" onclick='slider.prev();return false;'><em>prev</em></a>
-				<span class="current-slide">
+				<span id="current-slide" class="current-slide">
 					<em class="on">•</em><em>•</em><em>•</em><em>•</em></span>
 				<a href='#' class="next" onclick='slider.next();return false;'><em>next</em></a>
 			</div>
