--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
 <div class="wrapper">
 
 	<header class="header" role="banner">
-		<a class="logo" href="/">FE Autos</a>
+		<a class="logo" href="index.html">FE Autos</a>
 	</header>
 
 	<article class="main" role="main">
