--- a/index.html
+++ b/index.html
@@ -28,39 +28,43 @@
 			<h1>Used Cars in <b>11211</b> with <b>50 miles</b> radius</h1>
 
 			<article class="listing">
-				<img src="img/autos/bmw-1.jpg" alt="" />
-				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				<a href="details.html">
+					<img src="img/autos/bmw-1.jpg" alt="" />
+					<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				</a>
 			</article>
 
 			<article class="listing">
-				<img src="img/autos/bmw-1.jpg" alt="" />
-				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				<a href="details.html">
+					<img src="img/autos/che-4.jpg" alt="" />
+					<h2>Chevrolet Camaro  - $32,000 - 2011 - 26,000 mil</h2>
+				</a>
 			</article>
 
 			<article class="listing">
-				<img src="img/autos/bmw-1.jpg" alt="" />
-				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				<a href="details.html">
+					<img src="img/autos/lam-1.jpg" alt="" />
+					<h2>Lamborghini Diablo  - $32,000 - 2012 - 26,000 mil</h2>
+				</a>
 			</article>
 
 			<article class="listing">
-				<img src="img/autos/bmw-1.jpg" alt="" />
-				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				<a href="details.html">
+					<img src="img/autos/mis-4.jpg" alt="" />
+					<h2>Ford Mustang  - $32,000 - 2012 - 26,000 mil</h2>
+				</a>
 			</article>
 
-			<article class="listing">
-				<img src="img/autos/bmw-1.jpg" alt="" />
-				<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
-			</article>
 		</div>
 
 	</div>
 
-	<aside role="complementary">
+	<aside class="drill" role="complementary">
 		This is a drill
 	</aside>
 
 	<footer class="footer" role="contentinfo">
-		<p><small>Footer</small></p>
+		<p><small>© FE Autos</small></p>
 	</footer>
 
 </div><!-- .wrapper -->
