input on details

--- a/details.html
+++ b/details.html
@@ -55,9 +55,9 @@
 				<h2>I’m Interested?</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
 				<div class="details">
 					<form>
-						<input name="fn-ln" placeholder="First and Last name">
-						<input name="email" placeholder="Email">
-						<input name="phone" placeholder="Phone">
+						<input name="fn-ln" placeholder="First and Last name" type="text">
+						<input name="email" placeholder="Email" type="text">
+						<input name="phone" placeholder="Phone" type="text">
 					</form>
 				</div>
 			</div>
