--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	</header>
 
 	<div class="main" role="main">
-		<div class="content">
+		<div class="listings">
+
 			<h1>Used Cars in <b>11211</b> with <b>50 miles</b> radius</h1>
 
 			<article class="listing">
