--- a/details.html
+++ b/details.html
@@ -78,7 +78,7 @@
 	</article>
 
 	<footer class="footer" role="contentinfo">
-		<p><small>© FE Autos</small></p>
+		<p><small></small></p>
 	</footer>
 
 </div><!-- .wrapper -->
