--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	</aside>
 
 	<footer class="footer" role="contentinfo">
-		<p><small>© FE Autos</small></p>
+		<p><small></small></p>
 	</footer>
 
 </div><!-- .wrapper -->
