car fax and more details section

--- a/details.html
+++ b/details.html
@@ -71,7 +71,31 @@
 							<span>Silver</span>
 							<span>Gray</span>
 						</dd>
+						<dt>Engine:</dt>
+						<dd>
+							<span>8 Cyl</span>
+							<span>4WD</span>
+							<span>Automatic</span>
+						</dd>
+						<dt>Fuel:</dt>
+						<dd>
+							<span class="block">Gasoline</span>
+							<span>AVG 14</span>
+							<span>CITY 12</span>
+							<span>HWY 17</span>
+						</dd>
+						<dt>Loc & Info:</dt>
+						<dd>
+							<span class="block">New Jersey, New York</span>
+							<span>VIN 1N6AA06F89N306194</span>
+						</dd>
+						<dt>Carfax Report:</dt>
+						<dd>
+							<img src="img/carfax.png" alt="carfax report">
+						</dd>
 					</dl>
+					<a href="javascript:void(0);">View the Free CARFAX Report</a>
+					<p><small>*Not all accidents or other issues are reported to CARFAX. The number of owners is estimated. See the full CARFAX Report for additional information and glossary of terms. <br>05.Oct.2012 18:21:55</small></p>
 				</div>
 			</div>
 		</div>
