changes for large screens and add submit button

--- a/details.html
+++ b/details.html
@@ -51,17 +51,25 @@
 					</ul>
 				</div>
 			</div>
-			<div class="section">
+			<div class="section madlib">
 				<h2>I’m Interested?</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
 				<div class="details">
 					<form>
+						<label>First and Last name</label>
 						<input name="fn-ln" placeholder="First and Last name" type="text">
+						<label>Email</label>
 						<input name="email" placeholder="Email" type="text">
+						<label>Street</label>
+						<input name="street" placeholder="Street" type="text">
+						<label>Phone</label>
 						<input name="phone" placeholder="Phone" type="text">
+						<label>Company</label>
+						<input name="company" placeholder="Company" type="text">
+						<input type="submit" value="Contact Dealer">
 					</form>
 				</div>
 			</div>
-			<div class="section">
+			<div class="section more-details">
 				<h2>More Details</h2> <a class="colapse" href="javascript:void(0);">arrow down</a>
 				<div class="details">
 					<dl>
