--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div class="wrapper">
 
 	<header class="header" role="banner">
+		<a class="toggle-drill" href="#"><i class="icon-reorder"></i></a>
 		<a class="logo" href="index.html">FE Autos</a>
 	</header>
 
@@ -56,6 +57,40 @@
 				</a>
 			</article>
 
+			<article class="listing">
+				<a href="details.html">
+					<img src="img/autos/bmw-1.jpg" alt="" />
+					<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				</a>
+			</article>
+
+			<article class="listing">
+				<a href="details.html">
+					<img src="img/autos/che-4.jpg" alt="" />
+					<h2>Chevrolet Camaro  - $32,000 - 2011 - 26,000 mil</h2>
+				</a>
+			</article>
+
+			<article class="listing">
+				<a href="details.html">
+					<img src="img/autos/lam-1.jpg" alt="" />
+					<h2>Lamborghini Diablo  - $32,000 - 2012 - 26,000 mil</h2>
+				</a>
+			</article>
+
+			<article class="listing">
+				<a href="details.html">
+					<img src="img/autos/mis-4.jpg" alt="" />
+					<h2>Ford Mustang  - $32,000 - 2012 - 26,000 mil</h2>
+				</a>
+			</article>
+
+			<article class="listing">
+				<a href="details.html">
+					<img src="img/autos/bmw-1.jpg" alt="" />
+					<h2>BMW X6  - $50,000 - 2012 - 26,000 mil</h2>
+				</a>
+			</article>
 		</div>
 
 	</div>
