--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			<article class="listing">
 				<a href="details.html">
-					<img src="img/autos/mis-4.jpg" alt="" />
+					<img src="img/autos/mus-4.jpg" alt="" />
 					<h2>Ford Mustang  - $32,000 - 2012 - 26,000 mil</h2>
 				</a>
 			</article>
@@ -80,7 +80,7 @@
 
 			<article class="listing">
 				<a href="details.html">
-					<img src="img/autos/mis-4.jpg" alt="" />
+					<img src="img/autos/mus-4.jpg" alt="" />
 					<h2>Ford Mustang  - $32,000 - 2012 - 26,000 mil</h2>
 				</a>
 			</article>
