adding back button on details page

--- a/details.html
+++ b/details.html
@@ -19,6 +19,7 @@
 <div class="wrapper">
 
 	<header class="header" role="banner">
+		<input class="back" type="button" value="« Back" onclick="history.back(-1)" />
 		<a class="logo" href="index.html">FE Autos</a>
 	</header>
 
